--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
                                 rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
+                            <a href="mailto:vinit71811@gmail.com" aria-label="Send an email to Vinit"
+                                title="Email">
+                               <i class="fa-solid fa-download"></i>
+                            </a>
                         </div>
                         <!-- <div class="flex gap-3 xl:gap-5 items-center mt-2">
                             <button class="mybtn py-2 h-10 flex gap-1 items-center justify-center text-center 
@@ -421,11 +425,10 @@
                                 <img src="assets\images\House-Price-Prediction-Using-Machine-Learning.png" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base font-popins-bold">House Price Prediction Model</h2>
+                            <h2 class="text-base font-popins-bold">CryptoTacker</h2>
 
                             <p class="text-sm mt-2">
-                                Developed and deployed a RESTful API using Python and Scikit-learn to expose the house price prediction model. Improved prediction accuracy by 10 percent compared to a baseline model.
-                            </p>
+                                Developed a real-time cryptocurrency tracker using CoinGecko API to fetch and display live price data, market cap, volume, and price changes.Implemented dynamic UI updates using React.js to reflect real-time changes in cryptocurrency prices.Integrated sorting and filtering functionalities to allow users to compare cryptocurrencies based on performance metrics.                            </p>
                             <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
                         </a>
 
@@ -450,10 +453,7 @@
                                     class="absolute z-10 top-0 right-0 text-sm text-gray-500 transition-opacity duration-300 bg-white border border-gray-200 rounded-lg shadow-xs hidden w-72 dark:bg-gray-800 dark:border-gray-600 dark:text-gray-400 group-hover:inline-block">
                                     <div class="p-3 space-y-2">
                                         <h3 class="font-semibold">Contributions</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit necessitatibus
-                                            magni, nostrum consequatur modi repellat neque rerum qui, sunt repudiandae
-                                            deserunt et autem laudantium possimus cumque expedita distinctio accusantium
-                                            dolorum!</p>
+                                        <p>This chart is used to showcase my contributions on GitHub and all the technologies which contribute the most to my project.</p>
                                         <h3 class="font-semibold text-gray-900 dark:text-white">Personal Contributions
                                         </h3>
                                         <p>This shows most used languages on my personal GitHub profile</p>
