Staged all the changes and fixed issues

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
-                            <a href="mailto:vinit71811@gmail.com" aria-label="Send an email to Vinit"
+                            <a href="vinit_s_resume (2).pdf" aria-label="Send an email to Vinit"
                                 title="Email">
                                <i class="fa-solid fa-download"></i>
                             </a>
@@ -391,38 +391,37 @@
 
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-full">
                         <!-- project1 -->
-                        <a href="#" data-aos="fade-up"
+                        <a href="https://github.com/vinitisready/Customer-Lifetime-Value-Prediction" data-aos="fade-up"
                             class="group border-2  dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
                                 <img src="assets\images\customer segmentation image.jpg" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base font-popins-bold">Customer Segmentation</h2>
+                            <h2 class="text-base font-popins-bold">Customer Llifetime Value Prediction</h2>
 
                             <p class="text-sm  mt-2">
                                The primary objective of this project is to employ machine learning techniques to perform customer segmentation. By analyzing a variety of customer data, we aim to identify natural groupings within the customer base. These groupings can then be used to develop targeted marketing campaigns, personalized customer experiences, and strategic business decisions that drive growth and customer satisfaction.
                             </p>
-                            <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
+                            <p class="float-right "><i class=" fa-solid fa-code" ></i></i></p>
                         </a>
                         <!-- project2 -->
-                        <a href="#" data-aos="fade-up"
+                        <a href="https://github.com/vinitisready/Placement-Management" data-aos="fade-up"
                             class="group border-2  dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets\images\emotions.png" alt="project1"
+                                <img src="" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
-                            <h2 class="text-base  font-popins-bold">E-Music</h2>
+                            <h2 class="text-base  font-popins-bold">Placement Management System</h2>
 
                             <p class="text-sm mt-2">
-                               Load model using TensorFlow/Keras or PyTorch. Developed and deployed a scalable system capable of handling 100 concurrent requests.
-                            </p>
+                                    Built a full-stack Campus Placement Management Portal (React, Node.js, MongoDB) with secure authentication, real-time dashboards, and coordinator tools for events and analytics; optimized backend for 5,000+ users with 40% faster response times, secure file handling, and modern UI/UX for a seamless experience.                            </p>
                             <p class="float-right "><i class=" fa-solid fa-code"></i></i></p>
                         </a>
                         <!-- project3 -->
-                        <a href="#" data-aos="fade-up"
+                        <a href="https://github.com/vinitisready/CryptoTrack" data-aos="fade-up"
                             class="group border-2 dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="assets\images\House-Price-Prediction-Using-Machine-Learning.png" alt="project1"
+                                <img src="\assets\images\image.png" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
                             <h2 class="text-base font-popins-bold">CryptoTacker</h2>
