fixed the resume path

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 rel="noopener noreferrer">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
-                            <a href="vinit_s_resume (2).pdf" aria-label="Send an email to Vinit"
+                            <a href="vinitsresume.pdf" aria-label="Send an email to Vinit"
                                 title="Email">
                                <i class="fa-solid fa-download"></i>
                             </a>
