Fixed project section

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <a href="https://github.com/vinitisready/Placement-Management" data-aos="fade-up"
                             class="group border-2  dark:border-gray-700 p-4 rounded-lg hover:shadow-lg hover:scale-105 transition duration-300">
                             <div class="overflow-hidden">
-                                <img src="" alt="project1"
+                                <img src="\assets\images\image copy.png" alt="project1"
                                     class="w-full h-48 object-cover mb-4 rounded-md transition-transform duration-300 transform scale-105 group-hover:scale-100" />
                             </div>
                             <h2 class="text-base  font-popins-bold">Placement Management System</h2>
